# java-manager-win

./: Cargo.toml
src/: args.rs  config.rs  main.rs  win.rs
src/cmd/: add.rs  list.rs  mod.rs  remove.rs  set.rs
