[package]
name = "java-manager-win"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.135", features = ["derive"] }
confy = "0.4.0"
clap = { version = "3.0.12", features = ["derive"] }
directories = "4.0"